--- a/edwin_2019/chapter-discoveries-behavior.tex
+++ b/edwin_2019/chapter-discoveries-behavior.tex
@@ -50,7 +50,7 @@ Keytool工具为Java自带工具，被广泛地用于管理密钥和证书，因
 由于每个仿冒样本均有对应的应用证书，本研究构造了仿冒样本与应用证书的二分图，其中两类节点分别为仿冒样本和应用证书，若两节点之间存在边，则表示该样本由该证书签署。
 在仿冒应用持有的所有应用证书中，多数证书（76\%）仅仅关联了一个或两个仿冒样本，与最多仿冒应用的证书签署了1,374个仿冒样本。
 \autoref{table:certificate_number_statistic}统计了应用证书和他们对应的仿冒样本数量。
-表格第一栏为仿冒样本的数量区间，第二栏为关联的仿冒样本数量该落于区间的应用证书数，如第一列数据指有8252个应用证书签署的样本数为1到5个。
+表格第一栏为仿冒样本的数量区间，第二栏为关联的仿冒样本数量该落于区间的应用证书数，如第一列数据指有8,252个应用证书签署的样本数为1到5个。
 大部分应用证书都只关联了1到5个应用样本，但也有少量应用证书与大量仿冒样本有关联关系。
 
 \begin{table}[htbp]
@@ -81,7 +81,7 @@ Android官方文档~\cite{UICCcert}显示，该证书为Android Studio自带的A
 此结果表明国内大部分应用市场在审核阶段并未对该类证书进行有效拦截，开发者可凭借该类证书将仿冒应用上传至市场中，增加用户风险。
 
 进一步，作者抽取所有证书的开发者名称进行匹配，得到~\autoref{table:certificate_developer_name}。
-与下文~\autoref{table:certificate_number_statistic}相似，表格第一栏为某开发者名对应应用证书的数量区间，第二栏为对应应用证书数量该落于区间的开发者名称数，如第一列数据指有5355个开发者名称仅与1个应用证书对应。
+与下文~\autoref{table:certificate_number_statistic}相似，表格第一栏为某开发者名对应应用证书的数量区间，第二栏为对应应用证书数量该落于区间的开发者名称数，如第一列数据指有5,355个开发者名称仅与1个应用证书对应。
 
 \begin{table}[htbp]
     \renewcommand{\arraystretch}{1}
@@ -112,12 +112,12 @@ Android官方文档~\cite{UICCcert}显示，该证书为Android Studio自带的A
         \toprule
         {\bf 开发者名称}                        & {\bf 对应仿冒样本数量} \\
         \midrule
-        cn                                      & 1888                   \\
-        \rowcolor{gray!15}Android               & 1661                   \\
-        Android Debug                           & 1285                   \\
-        \rowcolor{gray!15}（空字符串）          & 1278                   \\
-        zh                                      & 1176                   \\
-        \rowcolor{gray!15}http://soft.sj.91.com & 1033                   \\
+        cn                                      & 1,888                  \\
+        \rowcolor{gray!15}Android               & 1,661                  \\
+        Android Debug                           & 1,285                  \\
+        \rowcolor{gray!15}（空字符串）          & 1,278                  \\
+        zh                                      & 1,176                  \\
+        \rowcolor{gray!15}http://soft.sj.91.com & 1,033                  \\
         yk                                      & 982                    \\
         \rowcolor{gray!15}Gavin Van             & 698                    \\
         Unknown                                 & 653                    \\
@@ -186,9 +186,9 @@ Android官方文档~\cite{UICCcert}显示，该证书为Android Studio自带的A
     \label{fig:fake_cnt_per_month}
 \end{figure*}
 
-\autoref{fig:sample_cnt_per_month}展现了自2015年11月起，仿冒应用开发者每个月在29个数据来源中上架的仿冒样本数量，$x$轴代表月份，$y$轴表示某月对应仿冒样本数量。
-数据表明，2015年年末、2016年第一、第二季度与2017年第一季度间，有大量仿冒应用被上架到市场中，其他时段仿冒应用上架量较为稳定，约为每月1000个，仿冒应用上架量有逐年递减的趋势。
-\autoref{fig:cert_cnt_per_month}则为同时期在三个月内发布过仿冒样本的应用证书数量。
+图~\autoref{fig:sample_cnt_per_month}展现了自2015年11月起，仿冒应用开发者每个月在29个数据来源中上架的仿冒样本数量，$x$轴代表月份，$y$轴表示某月对应仿冒样本数量。
+数据表明，2015年年末、2016年第一、第二季度与2017年第一季度间，有大量仿冒应用被上架到市场中，其他时段仿冒应用上架量较为稳定，约为每月1,000个，仿冒应用上架量有逐年递减的趋势。
+图~\autoref{fig:cert_cnt_per_month}则为同时期在三个月内发布过仿冒样本的应用证书数量。
 2016年与2017年第一、二季度为仿冒应用开发者最活跃的阶段，其后仿冒应用开发者数量骤减并趋向稳定，从2018年第三季度开始有复苏迹象。
 结合两图，作者认为仿冒应用高峰已过，但其威胁依然存在，各大应用市场方仍需加强审查保障用户安全。
 
@@ -314,14 +314,14 @@ Android官方文档~\cite{UICCcert}显示，该证书为Android Studio自带的A
 
 与本节工作相关的研究分为两类，一类的研究方法与本章类似，另一类的研究目的与本章类似。
 
-Zhang等人针对Android应用中的第三方库进行实证研究~\cite{zhang2020empirical}，其中采用了与本文类似的研究方法，探究应用作者与潜在恶意第三方库（potentially malicious libraries，PMLs）的关联。
+Zhang等人针对Android应用中的第三方库进行实证研究~\cite{zhang2020empirical}，其中采用了与本文类似的研究方法，探究应用作者与潜在恶意第三方库（Potentially Malicious Libraries，PMLs）的关联。
 该文献提取应用中的证书信息，与应用中的PML进行配对，寻找与PML存在一对一关系的应用证书，并推断某些流行的PML可能由同一开发者制作。
 在探究PML与应用证书的关联时，Zhang等人也发现了其应用样本包含开发者名为空或为Android Debug的证书。
 由于该类证书无法提供更多开发者信息，Zhang等人将携带该类证书的应用从研究中排除。
 与之相比，本研究重点为通过分析仿冒应用作者的行为揭示应用市场现存的监管漏洞，此类证书的出现表示应用市场在应用证书审核流程仍有缺陷，与研究方向相符，因此本章研究并未筛去此类证书及相关样本。
 
 与本文研究目的类似的工作有Zhang等人针对Android恶意应用的实证研究~\cite{Zhou2012DissectingAM}。
-该文献收集了源于49个家族的1260个Android恶意应用，结合数据统计与样例分析，总结出与恶意应用相关的领域知识，如恶意应用常通过重打包、更新攻击和路过式下载（Drive-by Download）三种方式进行传播。
+该文献收集了源于49个家族的1,260个Android恶意应用，结合数据统计与样例分析，总结出与恶意应用相关的领域知识，如恶意应用常通过重打包、更新攻击和路过式下载（Drive-by Download）三种方式进行传播。
 更新攻击指恶意应用开发者为了躲避应用市场的监管审查，有意在应用市场上上架不包含恶意代码的应用，然后在用户安装应用之后，提示用户升级，进而绕开应用市场，将带有恶意代码的新版本安装到用户设备上的行为。
 路过式下载则指用户已安装的恶意软件，在用户不知晓的情况下，静默下载和安装更多恶意软件的行为。
 通过揭示恶意应用的传播方式、恶意行为等信息，该研究揭示了改良已有恶意应用检测方法的重要性与优化方向。
