Revision suggested by Prof. Liang Dou

--- a/edwin_2019/B2-ABSTRACT-E.tex
+++ b/edwin_2019/B2-ABSTRACT-E.tex
@@ -31,11 +31,12 @@ The results can act as a reference for common users and app markets on resisting
 Combining the release time of fake apps and the certificate information extracted from them, this article develops a series of behavioral portraits of fake app developers from the perspectives of active period and releasing behavior.
 App markets can gain experience in risk-control from these portraits.
 
-\textbf{A practical framework for fake app detection. }
+\textbf{Design and implementation of a light-weight framework for fake app detection. }
 As shown by the empirical study, no satisfying countermeasure again fake apps are proposed in app stores in China.
-In response to the situation, \mytool is introduced in this article to help achieve quick identifications on known original apps and the corresponding fake app samples.
+In response to the situation, \mytool is introduced in this article.
+Empowered by image processing and static analysis techniques, it can achieve quick identification of known original apps and the corresponding fake app samples and provide evidence for revision.
 
-In summary, this study has collected a large-scale data set, empowers further exploration and studies in the future.
+In summary, this study has collected a large-scale data set, enable further exploration and studies in the future.
 Meanwhile, depending on these data, a comprehensive analysis is conducted on fake apps.
 Our study put forward practical suggestions for both common users and app markets and propose a feasible framework for fake app detection to raise awareness of fake apps.
 
