--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -34,7 +34,7 @@
 即使用户删除仿冒应用、装上原版应用，也浪费了时间和人力成本。
 
 综上所述，仿冒应用影响用户搜索与下载应用时的安全和体验，最终使用户、原版应用开发者和应用市场三方利益均受到损害。
-为了消除仿冒应用带来的隐患，无论是开发者、应用市场或是普通用户，都应对仿冒应用的特征与行为有所了解。
+为了消除仿冒应用带来的隐患，无论是开发者、应用市场或是普通用户，都有必要对仿冒应用的特征与行为有更深入的理解。
 
 \section{研究现状}
 尽管客观上存在对仿冒应用进行了解的需求，本研究对移动应用领域的前期调研显示，针对仿冒应用进行的实证研究尚缺乏，也未有公开可用的仿冒应用数据集。
@@ -145,7 +145,7 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 %
 % 前期调研显示，针对仿冒应用进行的实证研究尚缺乏，也没有公开可用的仿冒应用数据集。
 
-\section{拟采用的研究方法}
+\section{采用的研究方法}
 上述研究现状说明，实证研究在多个研究方向上提供了研究数据或领域知识，有一定实用价值。
 当下的仿冒应用研究，既缺乏可用的数据集，也缺乏对应的基本特征知识。
 作为基于数据采集和数据分析的技术，实证研究方法正好可缓解仿冒应用领域知识和数据集的缺失，是适用于本课题的技术手段。
@@ -203,7 +203,7 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 % 为此，本研究先后设计了基于用户行为可信度和基于评论内容重复度的两个方法。
 % 前者规避了现有方法的局限性，后者进一步解决了大数据量带来的大运算量问题。
 
-\section{本文拟解决的关键问题}
+\section{关键问题分析}
 上一节提及，科学地进行数据收集是本研究面临的一个关键问题。
 此外，本研究还有两个关键问题，一并列举如下：
 
@@ -236,6 +236,7 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 	      \setlength{\parsep}{0pt}
 	\item \emph{全面的数据集整理} \quad
 	      借助自行实现的仿冒应用收集框架，本研究尽可能全面地收集了来自29个应用来源的约14万个应用样本，并从中筛选出5万个仿冒样本，整理成已知的首个仿冒应用数据集，以供其后的相关研究使用。
+	      相关数据可于github访问。\footnote{数据集地址：url{https://github.com/miniminiwhite/FakeRevealer/tree/master/dataset}}
 
 	\item \emph{仿冒应用数据画像与现实案例分析} \quad
 	      本文从基本信息与开发者行为两个方向入手分别进行了实证研究，前者对仿冒引用进行了较为全面的数据画像，后者根据仿冒应用开发者行为推断出现有应用市场监管不足之处。
@@ -245,7 +246,8 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 	      基于在实证研究中的发现，本文分析了仿冒应用特征的可能成因与现有应用市场的不足之处，由此分别面向普通用户、应用市场和相关从业者提供了实用建议。
 
 	\item \emph{仿冒应用检测框架} \quad
-	      依靠前序研究中对仿冒应用的理解与解读，作者设计并实现了仿冒应用检测框架\mytool 。
+	      依靠前序研究中对仿冒应用的理解与解读，作者设计并实现了轻量级仿冒应用检测框架\mytool ，结合图像处理技术与静态分析技术快速筛选仿冒应用，并为人工审核提供判别依据。
+	      相关代码可于github访问。\footnote{代码库地址：\url{https://github.com/miniminiwhite/FakeRevealer}}
 
 \end{itemize}
 
@@ -304,7 +306,7 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 % todo: 7 chapters?
 本文共分为七章，环绕着本研究的数据搜集和不同的分析方向展开，各章节内容如下：
 
-\fullref{chp:intro} 主要提供了本文的研究背景、相关工作、本文拟采用的研究方法、拟解决的问题与本文的主要工作。
+\fullref{chp:intro} 主要提供了本文的研究背景、相关工作、本文采用的研究方法、关键问题分析与本文的主要工作。
 
 \fullref{chp:background} 介绍相关技术背景，从软件工程领域的实证研究出发，介绍实证研究的常用方法和数据收集、验证标准等理论背景，再着眼于本研究的主体——Android应用，介绍了Android安全证书机制和与仿冒应用相关的重打包技术。
 
