--- a/edwin_2019/A1-COVER-1.tex
+++ b/edwin_2019/A1-COVER-1.tex
@@ -1,7 +1,7 @@
 \pagestyle{empty}
 \setlength{\baselineskip}{25pt}  %%正文设为25磅行间距
 \vspace{-2.0cm}
-\noindent{{\zihao{4} {\large \yearOfGrduation} 届硕士专业学位论文}}\\
+\noindent{{\zihao{4} {\large \yearOfGrduation} 届研究生硕士学位论文}}\\
 \vspace{-0.8cm}
 \begin{flushleft}
 \hspace{-0.5cm}
