--- a/edwin_2019/chapter-background.tex
+++ b/edwin_2019/chapter-background.tex
@@ -17,7 +17,7 @@
 因此，有越来越多的研究者使用实证研究技术对研究主体进行探索\cite{Felt2011ASO, Zhou2012DissectingAM, Andow2016ASO, wang2018android, chen2018ausera, chen2018mobile, bieman1995reuse, harrison2000experimental, dybaa2008empirical, manotas2016empirical, mcintosh2016empirical, mcilroy2016fresh, wu2016ji, yang2015xin, hu2019dating, khanmohammadi2019empirical}，并为相关研究领域贡献了宝贵的领域知识。
 随着实证研究技术在软件工程领域中的认可度逐渐提高，软件工程顶级会议FSE与ICSE近年分别新设立了面向工业界的投稿分区，鼓励学者多基于应用场景进行实证研究，探明业界现状。
 
-理论方面，为向软件工程领域进行实证研究的学者提供方法论支持，Kitchenham等人基于自身在评阅软件工程项目的经验和一份针对医学研究者的研究指引，总结出了一份对于软件工程实证研究的初步准则（Preliminary guideline）~\cite{kitchenham2002preliminary}，对实证研究的数据收集方法、实验设置方法等各个步骤均给出严格指引，如在数据收集时需要确保数据的准确性与全面性，需要保证实验的可重复性等。
+理论方面，为向软件工程领域进行实证研究的学者提供方法论支持，Kitchenham等人基于自身在评阅软件工程项目的经验和一份针对医学研究者的研究指引，总结出了一份对于软件工程实证研究的初步准则（Preliminary guideline）~\cite{kitchenham2002preliminary}，对实证研究的数据收集方法、实验设置方法等各个步骤均给出严格指引，如在数据收集时需要确保数据的准确性与广泛性，需要保证实验的可重复性等。
 Seaman则结合实例，提供定性分析的方法建议~\cite{seaman1999qualitative}。
 在实证研究可采取的具体方式方面，Easterbrook等人提出了面向软件工程领域的实证研究方法建议~\cite{easterbrook2008selecting}，为软件工程实证研究提供方法论参考，文中将实证研究方法论分为受控实验、案例分析、调查研究、社会学意义研究与混合方法途径等多类，以适用于不同场景。
 
