--- a/edwin_2019/chapter-discoveries-behavior.tex
+++ b/edwin_2019/chapter-discoveries-behavior.tex
@@ -310,7 +310,7 @@ Android官方文档~\cite{UICCcert}显示，该证书为Android Studio自带的A
 % % With actually knowing that V1 is no longer safe, developers still refuse to embrace the safer scheme, which is really disappointing.
 % 在了解到V1版本签名机制已经不再安全的情况下，仍有部分开发者由于各种原因没有接受更新也更安全的签名方案，这个结果令人失望。
 
-\section{相关工作}
+\section{相关工作对比分析}
 
 与本节工作相关的研究分为两类，一类的研究方法与本章类似，另一类的研究目的与本章类似。
 
