--- a/edwin_2019/chapter-framework-prototype.tex
+++ b/edwin_2019/chapter-framework-prototype.tex
@@ -1,8 +1,8 @@
-\chapter{仿冒应用检测框架\mytool}
+\chapter{轻量级仿冒应用检测框架\mytool}
 \label{chp:framework_prototype}
 
 前两章分别从仿冒应用基本特征与仿冒应用开发者的行为特征入手，对仿冒应用开展实证研究，获取了仿冒应用命名、大小、投放偏好等特性，也说明了当下的应用市场并未对仿冒应用进行有效拦截。
-基于实证研究的发现，作者设计了仿冒应用检测框架\mytool 。
+基于实证研究的发现，作者结合图像处理技术与代码静态分析技术，设计与实现了轻量级仿冒应用检测框架\mytool 。
 通过使用\mytool ，应用市场方可在大规模应用中实现对已知正版应用及其对应仿冒样本的快速鉴别，有效检查出开发者上传的仿冒或正版应用，提高应用市场方的审核速度。
 本章将先阐述\mytool 的设计与实现，再进行系统实验并解析实验结果。
 
