--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -213,12 +213,12 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 	      \setlength{\parsep}{0pt}
 	\item \emph{如何科学地获取针对仿冒应用的数据？} \quad
 	      由于仿冒应用数据缺失，本文只能自行收集数据。
-	      数据搜集是科研工作中公认的难点，为提供一次全面的研究结果，除了数据需要有一定规模以外，搜集的目标应用也需要具备多样性，此外还必须获得不同应用市场上的数据，增加研究的代表性。
-	      为此，如何获得大量真实、有效、全面而有代表性的数据将是本文研究的一个关键点。
+	      数据搜集是科研工作中公认的难点，为提供一次有代表性的研究结果，除了数据需要有一定规模以外，搜集的目标应用也需要具备多样性，此外还必须获得不同应用市场上的数据，增加研究的代表性。
+	      为此，如何获得大量真实、有效、广泛而有代表性的数据将是本文研究的一个关键点。
 
 	\item \emph{如何对仿冒应用进行理解？} \quad
 	      仿冒应用虽然普遍存在于各大应用市场中，但尚未有研究对其进行分析，无论是应用市场、研究者还是用户，都缺乏对仿冒应用的理解。
-	      为能较全面地认识仿冒应用，需要从不同角度对其进行解读。
+	      为能较深入地认识仿冒应用，需要从不同角度对其进行解读。
 	      因此，从应用基本属性、应用作者行为等多角度对仿冒应用进行解析，是本文研究的重点之一。
 
 	\item \emph{是否能有效地筛选仿冒应用} \quad
@@ -234,19 +234,19 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 	\setlength{\itemsep}{1pt}
 	      \setlength{\parskip}{0pt}
 	      \setlength{\parsep}{0pt}
-	\item \emph{全面的数据集整理} \quad
-	      借助自行实现的仿冒应用收集框架，本研究尽可能全面地收集了来自29个应用来源的约14万个应用样本，并从中筛选出5万个仿冒样本，整理成已知的首个仿冒应用数据集，以供其后的相关研究使用。
-	      相关数据可于github访问。\footnote{数据集地址：url{https://github.com/miniminiwhite/FakeRevealer/tree/master/dataset}}
+	\item \emph{仿冒应用数据集整理与开放} \quad
+	      借助自行实现的仿冒应用收集框架，本研究尽可能广泛地收集了来自29个应用来源的约14万个应用样本，并从中筛选出5万个仿冒样本，整理成已知的首个仿冒应用数据集，以供其后的相关研究使用。
+	      相关数据可于github访问。\footnote{数据集地址：\url{https://github.com/miniminiwhite/FakeRevealer/tree/master/dataset}}
 
 	\item \emph{仿冒应用数据画像与现实案例分析} \quad
-	      本文从基本信息与开发者行为两个方向入手分别进行了实证研究，前者对仿冒引用进行了较为全面的数据画像，后者根据仿冒应用开发者行为推断出现有应用市场监管不足之处。
+	      本文从基本信息与开发者行为两个方向入手分别进行了实证研究，前者对仿冒引用进行了较为多维的数据画像，后者根据仿冒应用开发者行为推断出现有应用市场监管不足之处。
 	      两组研究除了从较高维度进行数据分析外，还从数据集中挑选出应用和证书实例，分别展开案例讨论，以深化在数据画像和行为分析中得到的领域知识。
 
 	\item \emph{提供实用建议} \quad
-	      基于在实证研究中的发现，本文分析了仿冒应用特征的可能成因与现有应用市场的不足之处，由此分别面向普通用户、应用市场和相关从业者提供了实用建议。
+	      基于在实证研究中的发现，本文分析了仿冒应用特征的可能成因与现有应用市场的不足之处，由此面向普通用户、应用市场分别提供实用建议：如普通用户可结合多方面信息识别仿冒应用；市场应制订严格的开发者证书管理制度，加强审核流程防止仿冒应用流入。
 
 	\item \emph{仿冒应用检测框架} \quad
-	      依靠前序研究中对仿冒应用的理解与解读，作者设计并实现了轻量级仿冒应用检测框架\mytool ，结合图像处理技术与静态分析技术快速筛选仿冒应用，并为人工审核提供判别依据。
+	      依靠前序研究中对仿冒应用的理解与解读，作者结合图像处理技术与静态分析技术设计并实现了轻量级仿冒应用检测框架\mytool ，快速筛选仿冒应用，并为人工审核提供判别依据。
 	      相关代码可于github访问。\footnote{代码库地址：\url{https://github.com/miniminiwhite/FakeRevealer}}
 
 \end{itemize}
