--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -28,7 +28,7 @@
 
 \usepackage{indentfirst,latexsym,colortbl,clrscode}
 
-% sudo code related.
+% sudo code related.\textsf{}
 \usepackage[linesnumbered,ruled,vlined,resetcount,algochapter]{algorithm2e}
 \usepackage{algorithmicx}
 \usepackage{listings}
@@ -185,9 +185,9 @@
 \newcommand{\TheisName}[0]{基于Android仿冒应用的实证研究}
 \newcommand{\TheisNameEn}[0]{An Empirical Study on Android Fake Apps}
 
-\def\yearOfGrduation{2021} % 毕业年份
-\def\monthOfGraduationNum{1} % 毕业月份
-\def\monthOfGraduationEng{January} % 毕业月份 (英文)
+\def\yearOfGrduation{2020} % 毕业年份
+\def\monthOfGraduationNum{10} % 毕业月份
+\def\monthOfGraduationEng{October} % 毕业月份 (英文)
 \def\articleCategory{华东师范大学硕士学位论文} % 论文类型
 
 \def\schoolNameChn{计算机科学与技术学院}
