--- a/edwin_2019/chapter-future.tex
+++ b/edwin_2019/chapter-future.tex
@@ -3,7 +3,7 @@
 
 \section{总结}
 本文率先引入了``仿冒应用''这一概念。
-在在搜集了大量数据的前提下，对仿冒应用从两个不同角度先后进行了两次实证研究，获取了仿冒应用的基本特性和仿冒应用开发者的行为特征，并推出了仿冒应用检测框架\mytool ，有一定现实意义。
+在搜集了大量数据的前提下，对仿冒应用从两个不同角度先后进行了两次实证研究，获取了仿冒应用的基本特性和仿冒应用开发者的行为特征，并推出了仿冒应用检测框架\mytool ，有一定现实意义。
 具体地，本文主要工作总结如下：
 
 1）引入了``仿冒应用''的概念，对仿冒应用的危害进行了简要分析，并借助Janus对收集了来自现实世界中29个应用来源的近14万个应用样本，获取了样本的证书信息、应用大小、应用名等信息，组成数据集。
