--- a/edwin_2019/chapter-research-settings.tex
+++ b/edwin_2019/chapter-research-settings.tex
@@ -167,7 +167,7 @@
 第四，该APK由仿冒应用开发者开发，由于仿冒应用开发者不具有正版开发者的私钥，不能为该APK签署正版应用证书，因此该APK具有仿冒应用开发者的证书（仿冒）。
 
 旧版签名机制存在漏洞，无法直接判断使用旧版签名机制签署、同时具备正版证书信息的APK文件是否曾被篡改。
-然而，只要其应用证书信息与正版应用信息不符，无论其为被解包篡改的原正版应用，或是仿冒应用开发者从新开发的仿冒应用，均可划入仿冒应用范畴。
+然而，只要其应用证书信息与正版应用信息不符，无论其为被解包篡改的原正版应用，或是仿冒应用开发者重新开发的仿冒应用，均可划入仿冒应用范畴。
 因此，本文在收集数据时，针对上述情况的第三、四种APK进行收集。
 
 % 本研究从360手机助手应用市场中随机挑选了856个应用，爬取这批应用的所有评论作为第三部分数据。
@@ -182,7 +182,7 @@
 % 如上节所述，本研究收集到的内容可分为两类：应用数据与评论数据。
 
 % 应用数据方面，
-从易观千帆提供的数据榜单中，本研究选择了分属11个不同的应用类别的50个最热门的App作为目标应用，。
+从易观千帆提供的数据榜单中，本研究选择了分属11个不同的应用类别的50个最热门的App作为目标应用。
 由于App的应用名可能会在App更新迭代的时候随之变更，作者用近似BFS的策略，从50种App中一共记录了198个不同的应用名以挖掘仿冒样本。
 
 在这50款App中，以下三款App的样本并不能在市面上找到：\emph{OPPO 应用商店}，\emph{华为应用商店}和\emph{小米应用商店}。
