答辩意见修改

--- a/edwin_2019/A4-MEMBERLIST.tex
+++ b/edwin_2019/A4-MEMBERLIST.tex
@@ -16,13 +16,13 @@ $$\\ \\ \\ $$
 	\def\affiliationB{******}
 	\def\affiliationC{******}
 \else
-	\def\nameProfA{柳银萍}
-	\def\titleProfA{教授}
-	\def\nameProfB{	章炯民}
+	\def\nameProfA{章炯民}
+	\def\titleProfA{副教授}
+	\def\nameProfB{窦亮}
 	\def\titleProfB{副教授}
-	\def\nameProfC{谢瑾奎}
+	\def\nameProfC{钱莹}
 	\def\titleProfC{副教授}
-	\def\affiliationA{华东师范大学数学科学学院}
+	\def\affiliationA{华东师范大学计算机科学与技术学院}
 	\def\affiliationB{华东师范大学计算机科学与技术学院}
 	\def\affiliationC{华东师范大学计算机科学与技术学院}
 \fi
