--- a/edwin_2019/chapter-discoveries-behavior.tex
+++ b/edwin_2019/chapter-discoveries-behavior.tex
@@ -186,9 +186,9 @@ Android官方文档~\cite{UICCcert}显示，该证书为Android Studio自带的A
     \label{fig:fake_cnt_per_month}
 \end{figure*}
 
-图~\autoref{fig:sample_cnt_per_month}展现了自2015年11月起，仿冒应用开发者每个月在29个数据来源中上架的仿冒样本数量，$x$轴代表月份，$y$轴表示某月对应仿冒样本数量。
+~\autoref{fig:sample_cnt_per_month}展现了自2015年11月起，仿冒应用开发者每个月在29个数据来源中上架的仿冒样本数量，$x$轴代表月份，$y$轴表示某月对应仿冒样本数量。
 数据表明，2015年年末、2016年第一、第二季度与2017年第一季度间，有大量仿冒应用被上架到市场中，其他时段仿冒应用上架量较为稳定，约为每月1,000个，仿冒应用上架量有逐年递减的趋势。
-图~\autoref{fig:cert_cnt_per_month}则为同时期在三个月内发布过仿冒样本的应用证书数量。
+~\autoref{fig:cert_cnt_per_month}则为同时期在三个月内发布过仿冒样本的应用证书数量。
 2016年与2017年第一、二季度为仿冒应用开发者最活跃的阶段，其后仿冒应用开发者数量骤减并趋向稳定，从2018年第三季度开始有复苏迹象。
 结合两图，作者认为仿冒应用高峰已过，但其威胁依然存在，各大应用市场方仍需加强审查保障用户安全。
 
