--- a/edwin_2019/chapter-research-settings.tex
+++ b/edwin_2019/chapter-research-settings.tex
@@ -129,7 +129,7 @@
 	\item 对于收集到的大量数据，研究者需要一个轻量级的解决方案快速判断获得的App样本为正版应用或是仿冒应用。
 \end{itemize}
 
-为应对第一个挑战，作者与工业界合作，利用犇众信息公司的Janus平台对各大应用商店进行样本爬取，获取应用样本信息。\footnote{此处平台与\secref{sec:signature}中提及的Android漏洞同名，但两者无直接关联，请注意区分。后文的``Janus平台''均指本平台，而``Janus漏洞''则特指Android漏洞。}
+为应对第一个挑战，作者与工业界合作，利用犇众信息公司的Janus平台对各大应用商店进行样本爬取，获取应用样本信息\footnote{此处平台与\secref{sec:signature}中提及的Android漏洞同名，但两者无直接关联，请注意区分。后文的``Janus平台''均指本平台，而``Janus漏洞''则特指Android漏洞。}。
 该平台自2017年起就开始对各大应用商店的App进行样本收集，可向用户提供各项App信息。
 如\autoref{fig:Janus-data}显示，Janus平台至今已收集到上千万个App样本，可满足本研究数据采集需求。
 除样本信息外，Janus平台也提供按规则搜索功能，用户可创建规则过滤平台中的应用数据，以获取所需应用App样本。
